--- a/app/src/main/res/layout/audio.xml
+++ b/app/src/main/res/layout/audio.xml
@@ -25,6 +25,16 @@
         android:textSize="34dp"
         android:visibility="visible" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+
+        android:layout_marginTop="15dp"
+
+        android:src="@drawable/music"
+
+        />
+
     <Button
         android:id="@+id/LogOutAudio"
         android:layout_width="match_parent"
@@ -34,6 +44,7 @@
         android:layout_marginTop="10dp"
         android:textColor="#ffffff" />
 
+
     <Button
         android:id="@+id/BackToHomeAudio"
         android:layout_width="match_parent"
@@ -42,6 +53,59 @@
         android:layout_marginTop="5dp"
         android:text="Back To Home"
         android:textColor="#ffffff" />
+
+
+
+    <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+    <Button
+        android:id="@+id/prev"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Previous"/>
+
+    <Button
+        android:id="@+id/play"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Play"/>
+
+    <Button
+        android:id="@+id/next"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        />
+
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Stop" />
+
+
+
+</LinearLayout>
+
+    <SeekBar
+        android:layout_marginTop="20dp"
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@android:color/holo_blue_bright"/>
+
+    <ListView
+        android:id="@+id/mainList"
+        android:layout_width="match_parent"
+        android:layout_height="195dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="10"
+        android:divider="@color/colorAccent"
+        android:dividerHeight="2dp" />
 
 
 
