--- a/app/src/main/res/layout/music_player.xml
+++ b/app/src/main/res/layout/music_player.xml
@@ -30,6 +30,14 @@
         android:layout_marginTop="20dp"
         android:text="Song Name" />
 
+    <TextView
+        android:id="@+id/artist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Artist" />
+
     <SeekBar
         android:id="@+id/seekBarPlayer"
         android:layout_width="300dp"
