--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,8 +8,6 @@
     tools:context=".Register"
     android:background="#42f4cb">
 
-
-
     <TextView
         android:id="@+id/textGrid"
         android:text="My Mental Health"
@@ -21,9 +19,6 @@
         android:gravity="center"
         android:paddingBottom="40dp"
         android:paddingTop="30dp"
-
-
-
         />
 
     <LinearLayout
@@ -34,21 +29,18 @@
         android:paddingTop="100dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!-- <EditText
-        android:id="@+id/RegName"
-
+         <EditText
+        android:id="@+id/userName"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:background="@drawable/edittextstyle"
-        android:hint="Name"
+        android:hint="Username"
         android:textColor="#fff"
-        android:textColorHint="#fff" />-->
-
+        android:textColorHint="#fff" />
 
         <EditText
             android:id="@+id/RegEmail"
-
             android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -59,7 +51,6 @@
 
         <EditText
             android:id="@+id/RegPword"
-
             android:layout_width="299dp"
             android:layout_height="66dp"
             android:layout_gravity="center"
@@ -84,9 +75,7 @@
             android:layout_marginTop="5dp"
             android:text="Password must have at least one Capital Letter"
             android:textColor="#fff"
-
             android:textStyle="bold"
-
             />
 
         <TextView
@@ -96,12 +85,10 @@
             android:text="Password must have at least one Number"
             android:textColor="#fff"
             android:textStyle="bold"
-
             />
 
 
         <Button
-
             android:id="@+id/RegBtn"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -112,7 +99,6 @@
             android:textColor="#fff" />
 
         <TextView
-
             android:id="@+id/LoginBk"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -122,9 +108,6 @@
             android:textColor="#fff"
             android:textSize="20dp" />
 
-
     </LinearLayout>
-
-
 
     </android.support.constraint.ConstraintLayout>
