--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="appMainColor">#42f4cb</color>
+    <color name ="white">#ffffff</color>
+    <color name="whiteTrans">#80ffffff</color>
 
 
 </resources>
