--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -26,9 +26,18 @@
         android:background="@drawable/buttonstyleselector"
         android:text="Back To Home"
         android:textColor="#ffffff" />
+
+        <FrameLayout
+            android:id="@+id/mainFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
     </LinearLayout>
     >
+
     <android.support.design.widget.BottomNavigationView
+        android:id="@+id/mainNav"
         android:layout_width="match_parent"
         android:layout_height="71dp"
         android:layout_alignParentBottom="true"
@@ -36,6 +45,5 @@
         app:itemBackground="@color/appMainColor"
         app:itemIconTint="@color/color_navbar"
         app:itemTextColor="@color/white"
-        app:menu="@menu/nav_items">
-    </android.support.design.widget.BottomNavigationView>
+        app:menu="@menu/nav_items"></android.support.design.widget.BottomNavigationView>
 </RelativeLayout>
