--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/nav_users"
         android:icon="@drawable/baseline_person_black_18dp"
         android:title="@string/nav_users" />
     <item
+        android:id="@+id/nav_chats"
         android:icon="@drawable/baseline_message_black_18dp"
         android:title="@string/nav_msgs" />
 </menu>
