--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".usersFragment">
 
-    <TextView
-        android:id="@+id/helloUsers"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/usersList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Users Frag"
-        android:textSize="100dp"/>
-
-</FrameLayout>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        tools:context=".usersFragment" />
+</RelativeLayout>
