--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/usersList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         tools:context=".usersFragment" />
