--- a/app/src/main/res/layout/users_view.xml
+++ b/app/src/main/res/layout/users_view.xml
@@ -21,6 +21,8 @@
         android:id="@+id/userView"
         android:layout_width="338dp"
         android:layout_height="40dp"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:layout_weight="30"
