--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -17,13 +17,33 @@
         android:gravity="center"
         >
 
+        <Button
+            android:id="@+id/backMsg"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/ic_arrow_back_black_24dp"/>
+
+        <ImageView
+            android:id="@+id/profileImgMsg"
+            android:layout_width="233dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="150dp"
+            android:gravity="center"
+            android:src="@drawable/ic_person_black_24dp"
+            android:textAlignment="center" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:textColor="#000000"
-            android:layout_marginRight="50dp"
-            android:textSize="20sp" />
+            android:id="@+id/userNameMsg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="5dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:text="userName"/>
+
+
 
     </RelativeLayout>
 
