--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -26,9 +26,9 @@
 
         <ImageView
             android:id="@+id/profileImgMsg"
-            android:layout_width="233dp"
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginRight="150dp"
+            android:layout_marginLeft="90dp"
             android:gravity="center"
             android:src="@drawable/ic_person_black_24dp"
             android:textAlignment="center" />
