--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -51,7 +51,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:background="#dfdfdf"
+        android:background="#e6e6e6"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
