--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
     <!-- Header aligned to top -->
     <RelativeLayout
         android:id="@+id/header"
@@ -14,15 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="@color/appMainColor"
-        android:gravity="center"
-        >
+        android:gravity="center">
 
         <Button
             android:id="@+id/backMsg"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/ic_arrow_back_black_24dp"/>
+            android:background="@drawable/ic_arrow_back_black_24dp" />
 
         <ImageView
             android:id="@+id/profileImgMsg"
@@ -39,58 +36,71 @@
             android:layout_height="50dp"
             android:layout_marginLeft="150dp"
             android:layout_marginTop="5dp"
+            android:text="userName"
             android:textSize="30dp"
-            android:textStyle="bold"
-            android:text="userName"/>
-
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
+
 
     <!-- A horizontal line between the chatbox and RecyclerView -->
     <View
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:background="#e6e6e6"
         android:layout_marginBottom="0dp"
+        android:background="#e6e6e6"
         app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
     <LinearLayout
         android:id="@+id/layout_chatbox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:minHeight="48dp"
         android:background="#ffffff"
+        android:minHeight="48dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <EditText
             android:id="@+id/edittext_chatbox"
-            android:hint="Enter message"
-            android:background="@android:color/transparent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:maxLines="6"/>
+            android:background="@android:color/transparent"
+            android:hint="Enter message"
+            android:maxLines="6" />
 
         <Button
             android:id="@+id/button_chatbox_send"
-            android:text="SEND"
-            android:textSize="14dp"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
             android:layout_width="64dp"
             android:layout_height="48dp"
+            android:layout_gravity="bottom"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
             android:gravity="center"
-            android:layout_gravity="bottom" />
+            android:text="SEND"
+            android:textSize="14dp" />
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="368dp"
+        android:layout_height="446dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="63dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
