--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -40,6 +40,14 @@
             android:textSize="30dp"
             android:textStyle="bold" />
 
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="70dp"
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:background="#ffffff"
+            android:layout_height="400dp"
+            ></android.support.v7.widget.RecyclerView>
+
 
     </RelativeLayout>
 
@@ -90,17 +98,8 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="446dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="63dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
+
 
 
 </android.support.constraint.ConstraintLayout>
