--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -15,14 +15,15 @@
 
     <TextView
         android:id="@+id/show_msg"
-        android:textSize="10sp"
+        android:textSize="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/backgroud_left"
         android:layout_toRightOf="@+id/profileImg"
         android:layout_marginLeft="5dp"
         android:text="hello"
-        android:padding="0dp"
+        android:padding="5dp"
+        android:layout_marginBottom="5dp"
         />
 
 </RelativeLayout>
