--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -10,24 +10,19 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/profileImg"
-            android:visibility="gone"
-            />
 
         <TextView
             android:id="@+id/show_msg"
-            android:textSize="10sp"
+            android:textSize="25dp"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/background_right"
             android:text="hello"
             android:textColor="#ffffff"
-            android:padding="0dp"
-            android:layout_alignParentRight="true" />
+            android:padding="5dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="5dp"/>
     </RelativeLayout>
 
 </RelativeLayout>
