--- a/app/src/main/res/layout/home_page2.xml
+++ b/app/src/main/res/layout/home_page2.xml
@@ -33,59 +33,10 @@
             <FrameLayout
                 android:id="@+id/fragmentContainer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                android:layout_height="match_parent">
+            </FrameLayout>
         </android.support.v7.widget.Toolbar>
 
-        <!--<android.support.v4.widget.DrawerLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/drawable"-->
-        <!--android:orientation="vertical">-->
-
-
-        <!--<android.support.design.widget.NavigationView-->
-        <!--android:id="@+id/navView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_gravity="start"-->
-        <!--app:headerLayout="@layout/nav_header"-->
-        <!--app:menu="@menu/navigation_menu">-->
-
-        <!--</android.support.design.widget.NavigationView>-->
-
-        <!--</android.support.v4.widget.DrawerLayout>-->
-
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:background="@drawable/buttonstyleselector"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/profile_image"-->
-        <!--android:layout_width="30dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:src="@drawable/ic_launcher_foreground"-->
-        <!--app:civ_border_color="#ffffff"-->
-        <!--app:civ_border_width="2dp" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/userNameH"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginBottom="14dp"-->
-        <!--android:layout_marginLeft="12dp"-->
-        <!--android:layout_marginTop="15dp"-->
-        <!--android:text="UserName"-->
-        <!--android:textColor="#ffffff"-->
-        <!--android:textSize="15dp" />-->
-        <!---->
-        <!--</LinearLayout>-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -111,7 +62,6 @@
             android:columnCount="2"
             android:columnOrderPreserved="false"
             android:padding="14dp"
-
             android:rowCount="2">
 
             <android.support.v7.widget.CardView
@@ -148,7 +98,6 @@
                         android:text="CHAT"
                         android:textSize="20dp" />
 
-
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -170,7 +119,6 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="16dp"
                     android:orientation="vertical">
-
                     <Button
                         android:id="@+id/journalBtn"
                         android:layout_width="wrap_content"
@@ -178,7 +126,6 @@
                         android:layout_gravity="center_horizontal"
                         android:background="#ffffff"
                         android:drawableTop="@drawable/diaryicon" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
